@@ -8,5 +8,5 @@ Name: devhelp
 Description: devhelp
 Requires: libgnomeui-2.0 gtk+-2.0 gnome-vfs-2.0
 Version: @VERSION@
-Libs: -L${libdir}/devhelp -ldevhelp
-Cflags: -I${includedir}/devhelp
+Libs: -L${libdir} -ldevhelp
+Cflags: -I${includedir}/devhelp-1.0
